<resources>
    <string name="app_name" translatable="false">AMT MultiBio Demo</string>
    <string name="title_activity_face_register" translatable="false">FaceRegisterActivity</string>
    <string name="register_face_from_camera" translatable="false">Register face from camera</string>
    <string name="register_face_from_picture" translatable="false">Register face from picture</string>
    <string name="delete_all_data" translatable="false">Delete all snapshots</string>
    <string name="app_version" translatable="false">1.0.7</string>
    <string-array name="facematch_mode">
        <item>Cont. Match</item>
        <item>Single Match</item>
    </string-array>
    <string-array name="camera_resolution">
        <item>480x640</item>
        <item>720x1280</item>
    </string-array>
    <string name="debug_level">Module log level</string>
    <string-array name="infrared_picture_format">
        <item>jpeg</item>
        <item>gray</item>
    </string-array>
    <string-array name="sensor_frame_rate_array" translatable="false">
        <item>15</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="liveness_mode_array">
        <item>Disable</item>
        <item>SingleLensLiveness</item>
        <item>DualLensLiveness</item>
    </string-array>
    <string name="palm_template_mode">Palm Template Mode</string>
    <string-array name="led_control_mode_array">
        <item>Controlled by Module</item>
        <item>Controlled by Host</item>
    </string-array>
    <string-array name="led_breath_type_array">
        <item>Disable</item>
        <item>Blue</item>
        <item>White</item>
        <item>Green</item>
    </string-array>
    <string-array name="video_stream_mode_type_array">
        <item>Disable</item>
        <item>Visible light video</item>
        <item>Infrared light video</item>
        <item>Both</item>
    </string-array>
    <string-array name="illumination_trigger_mode_type_array">
        <item>ModeProximityTrigger</item>
        <item>ModePalmTrigger</item>
    </string-array>
    <string-array name="identification_source_array" translatable="false">
        <item>Host</item>
        <item>MultiBioModule</item>
    </string-array>
    <string-array name="sdk_log_level_array" translatable="false">
        <item>VERBOSE</item>
        <item>DEBUG</item>
        <item>INFO</item>
        <item>WARN</item>
        <item>ERROR</item>
        <item>ASSERT</item>
    </string-array>
    <string-array name="face_alg_version">
        <item>AMTLiveFace5.95</item>
    </string-array>
    <string-array name="rotation_mode_txt">
        <item>Invalid position</item>
        <item>Horizontal position</item>
        <item>Vertical position</item>
    </string-array>
    <string name="text_placeholder" translatable="false">placeholder</string>
    <string name="device_info">Device Info</string>
    <string name="get_device_info_failed">Failed to read device info</string>
    <string name="user_registered">Registered</string>
    <string name="user_face">Face</string>
    <string name="user_palm">Palm</string>
    <string name="user_feature_image">Feature Image</string>
    <string name="user_none">None</string>
    <string name="search_user">Search</string>
    <string name="device_open_hid_action">"Open HID "</string>
    <string name="device_open_hid_success">Success!</string>
    <string name="device_open_hid_failed">Error!</string>
    <string name="device_init">Initializing…</string>
    <string name="device_not_found">Device not found</string>
    <string name="cam_status_tip_open_fail">Failed to open the device</string>
    <string name="cam_status_tip_capture_fail">Failed to open video steam</string>
    <string name="cam_status_tip_open_success">Camera opened successfully</string>
    <string name="tool_panel_devices">UVC Device</string>
    <string name="face_capture_register">Snapshot Registration</string>
    <string name="tool_panel_users">Users</string>
    <string name="tool_panel_camconfig">Camera Configuration</string>
    <string name="tool_panel_setting">Settings</string>
    <string name="tool_panel_display_setting">Display Settings</string>
    <string name="tool_panel_about_device">About</string>
    <string name="tip_cant_reg_in_cloud">Unable to register in cloud mode</string>
    <string name="tip_restart_app">Restart the app</string>
    <string name="tip_restart_app_2">Setting updated, need to reboot the module</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">OK</string>
    <string name="txt_no_i_do_not_want">No,Thanks</string>
    <string name="tip_update_face_data">Update face snapshot</string>
    <string name="tip_find_uvc_devices">Find UVC device</string>
    <string name="tip_find_uvc_devices_success">Device found successfully</string>
    <string name="tip_find_uvc_devices_fail">Failed to find device</string>
    <string name="devdig_tip_click_open_cam">Click to open camera</string>
    <string name="devdig_tip_pls_choose_your_option">Please choose</string>
    <string name="devdig_tip_close_cam">Turn off the camera</string>
    <string name="users_tip_update_data">Updating snapshot…</string>
    <string name="users_tip_update_complete">Update completed:</string>
    <string name="users_tip_delete_all_data">Are you sure to delete all data?</string>
    <string name="users_tip_cannot_delete">Cannot be deleted during update</string>
    <string name="users_tip_delete_ok">Deleted successfully</string>
    <string name="users_tip_delete_fail">Failed to delete</string>
    <string name="users_tip_deleting">Deleting…</string>
    <string name="camcfg_open_usb">Open USB</string>
    <string name="camcfg_system_upgrade">System upgrade</string>
    <string name="camcfg_firmware_upgrade">Firmware upgrade</string>
    <string name="camcfg_firmware_upgrade_tip">Send file for firmware upgrade</string>
    <string name="camcfg_send_file">Send file</string>
    <string name="camcfg_start_heart">Start heartbeat</string>
    <string name="camcfg_stop_heart">Stop heartbeat</string>
    <string name="camcfg_image_setting">Image settings</string>
    <string name="txt_get">Get</string>
    <string name="txt_set">Set</string>
    <string name="camcfg_rotation_mode">Rotation Mode</string>
    <string name="camcfg_face_mode">Face Mode</string>
    <string name="camcfg_common_setting">Common Settings</string>
    <string name="camcfg_set_reboot">Set and restart</string>
    <string name="camcfg_faceae_enable">Enable FaceAE</string>
    <string name="camcfg_rec_attr">Face attribute analysis</string>
    <string name="camcfg_rgb_liveness">RGB liveness</string>
    <string name="mask_recognize_fun_on_title">Recognition With Respirator</string>
    <string name="camcfg_score_interval">Quality inspection interval frames(2–7)</string>
    <string name="camcfg_face_rec_threshold">Face detection threshold</string>
    <string name="camcfg_threshold_blur">Blur level(0–100)</string>
    <string name="sensor_frame_rate" translatable="false">Sensor Frame Rate</string>
    <string name="led_control_mode_title">Indicator LED Control Mode</string>
    <string name="led_breath_type_title">LED Breath Type</string>
    <string name="video_stream_mode_title">Video Encode Mode</string>
    <string name="illumination_trigger_mode_title">Illumination Trigger Mode</string>
    <string name="rang_1_to_100">(0–100)</string>
    <string name="rang_1_to_1000">(0–1000)</string>
    <string name="rang_1_to_100000">(0–100000)</string>
    <string name="rang_2_to_7">(2–7)</string>
    <string name="rang_min_to_720">(min–720)</string>
    <string name="rang_min_to_1280">(min–1280)</string>
    <string name="rang_0_to_max">(0–max)</string>
    <string name="rang_0_to_180">(0–180)</string>
    <string name="rang_180_to_0">(180–0)</string>
    <string name="rang_0_to_1">(0–1)</string>
    <string name="camcfg_threshold_front">Front face(0–100)</string>
    <string name="camcfg_threshold_score">Quality score(0–100)</string>
    <string name="camcfg_threshold_height_max">Max height of face(0~720)</string>
    <string name="camcfg_threshold_height_min">Min height of face(0~1280)</string>
    <string name="camcfg_threshold_width_max">Max width of face(0~1280)</string>
    <string name="camcfg_threshold_width_min">Min width of face(0~1280)</string>
    <string name="camcfg_threshold_pitch_max">Pitch max(0~180)</string>
    <string name="camcfg_threshold_pitch_min">Pitch min(-180~0)</string>
    <string name="camcfg_threshold_roll_max">Roll max(0~180)</string>
    <string name="camcfg_threshold_roll_min">Roll min(-180~0)</string>
    <string name="camcfg_threshold_yaw_max">Yaw max(0~180)</string>
    <string name="camcfg_threshold_yaw_min">Yaw min(-180~0)</string>
    <string name="config_face_rec">Face recognition</string>
    <string name="config_threshold">Recognition Threshold</string>
    <string name="face_verify_threshold">Face Verify Threshold</string>
    <string name="config_match_mode">Face tracking mode</string>
    <string name="config_display_liveness_info">Display liveness info</string>
    <string name="config_display_cpu_temp_info">Display CPU Temp</string>
    <string name="config_display_fps_info">Display FPS</string>
    <string name="config_uvc_liveness_tip">Display liveness score on which the face recognition is based.</string>
    <string name="config_show_faceinfo">Display Face Info On Face Rect</string>
    <string name="config_show_detail_faceinfo">Display Face Info Detail On Face Rect</string>
    <string name="nav_title_face_manage">Face Management</string>
    <string name="snap_shot_rgb_title">RGB Image capture</string>
    <string name="snap_shot_gray_title">NIR Image capture</string>
    <string name="common_setting_title">Common Settings</string>
    <string name="rgb_liveness_title">RGB Liveness</string>
    <string name="nir_liveness_title">NIR Liveness</string>
    <string name="face_attr_recognize_interval">Face Attribute Recognize Interval</string>
    <string name="liveness_threshold">Liveness Threshold</string>
    <string name="single_lens_liveness_threshold">Single Lens Liveness Threshold</string>
    <string name="dual_lens_liveness_threshold">Dual Lens Liveness Threshold</string>
    <string name="recognize_interval">Recognition interval(ms)</string>
    <string name="attribute_recognize">Face Attribute Recognize</string>
    <string name="menu_hint_device_manage">Device Management</string>
    <string name="menu_system_setup">System Settings</string>
    <string name="biometeric_parameter_setup">Biometric Parameters</string>
    <string name="exit_app">Exit</string>
    <string name="remote_user_manage">User management on the module</string>
    <string name="add_new_user">Add a new user</string>
    <string name="is_enable_attendance_log_save_in_module">Enable to save attendance record</string>
    <string name="save_attendance_log">Save time and attendance record</string>
    <string name="is_enable_strange_att_log">Eable to save unregistered attendance record</string>
    <string name="save_strange_att_Log">Save unregistered attendance record</string>
    <string name="about">About</string>
    <string name="attend_interval">Attendance Interval</string>
    <string name="tool_panel_module_users">Module Users</string>
    <string name="max_face_enable">Only recognize max face</string>
    <string name="max_face_enable_tips">If enabled, only the largest face will be recognized.Otherwise, multiple faces are recognized.</string>
    <string name="push_photo_enable">Enable Feature Photo Push </string>
    <string name="push_photo_enable_tips">If enabled, the picture which extract feature will push with feature.</string>
    <string name="face_settings_title">Face Settings</string>
    <string name="liveness_mode">LivenessMode</string>
    <string name="detection_distance">Detection Distance</string>
</resources>