<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_manager_group"
            android:title="@string/nav_title_face_manage">
            <menu>
                <item
                    android:id="@+id/nav_show_register_list"
                    android:icon="@drawable/ic_user_manage"
                    android:title="@string/tool_panel_users" />
                <item
                    android:id="@+id/nav_module_internal"
                    android:icon="@drawable/ic_user_manage"
                    android:title="@string/remote_user_manage" />
            </menu>

        </item>

        <item
            android:id="@+id/nav_user_device_manage"
            android:title="@string/menu_hint_device_manage">
            <menu>
                <item
                    android:id="@+id/nav_system_setting"
                    android:icon="@drawable/common_setting"
                    android:title="@string/menu_system_setup" />

                <item
                    android:id="@+id/nav_bio_recognize_config"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/biometeric_parameter_setup" />

            </menu>
        </item>

        <item
            android:id="@+id/nav_device_info"
            android:title="@string/about">
            <menu>
                <item
                    android:id="@+id/nav_about_device"
                    android:icon="@drawable/ic_about_device"
                    android:title="@string/tool_panel_about_device" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/exit_app" />
            </menu>

        </item>
    </group>

</menu>