<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CustomSettingLayout="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="CommonSettings"
            type="com.armatura.biomodule.pojo.setting.CommonSettingData" />
    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SubNameStyle_Port"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/common_setting_title" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/NIRLivenessSwitch"
            customChecked="@{CommonSettings.NIRLiveness,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_hint="@string/nir_liveness_title"
            CustomSettingLayout:setting_key="NIRLiveness"
            CustomSettingLayout:setting_title="@string/nir_liveness_title" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/VLLivenessSwitch"
            customChecked="@{CommonSettings.VLLiveness,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_hint="@string/rgb_liveness_title"
            CustomSettingLayout:setting_key="VLLiveness"
            CustomSettingLayout:setting_title="@string/rgb_liveness_title" />


        <com.armatura.biomodule.view.CustomSettingLayout
            android:id="@+id/attendIntervalSetView"
            setting_value="@{CommonSettings.attendInterval,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            CustomSettingLayout:setting_key="attendInterval"
            CustomSettingLayout:setting_title="@string/attend_interval" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/attributeRecogSwitchView"
            customChecked="@{CommonSettings.attributeRecog,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            CustomSettingLayout:setting_key="attributeRecog"
            CustomSettingLayout:setting_title="@string/attribute_recognize" />

        <com.armatura.biomodule.view.CustomSettingLayout
            android:id="@+id/attrIntervalSetView"
            setting_value="@{CommonSettings.attrInterval}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_key="attrInterval"
            CustomSettingLayout:setting_title="@string/face_attr_recognize_interval" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/save_attendance_switch_view"
            customChecked="@{CommonSettings.enableStoreAttendLog,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            CustomSettingLayout:setting_hint="@string/is_enable_attendance_log_save_in_module"
            CustomSettingLayout:setting_title="@string/save_attendance_log" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/save_stranger_attendance_switch_view"
            customChecked="@{CommonSettings.enableStoreStrangerAttLog,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            CustomSettingLayout:setting_hint="@string/is_enable_strange_att_log"
            CustomSettingLayout:setting_title="@string/save_strange_att_Log" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/faceAESwitch"
            customChecked="@{CommonSettings.faceAEEnabled,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_key="faceAEEnabled"
            CustomSettingLayout:setting_title="@string/camcfg_faceae_enable" />


        <com.armatura.biomodule.view.CustomSettingLayout
            android:id="@+id/hacknessThresholdSetView"
            setting_value="@{CommonSettings.hacknessThreshold,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_key="hacknessThreshold"
            CustomSettingLayout:setting_title="@string/liveness_threshold" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/trackMatchSwitchView"
            customChecked="@{CommonSettings.isTrackingMatchMode,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_hint="@string/config_match_mode"
            CustomSettingLayout:setting_title="@string/config_match_mode" />


        <com.armatura.biomodule.view.CustomSettingLayout
            android:id="@+id/recogIntervalSetView"
            setting_value="@{CommonSettings.recogInterval,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_key="recogInterval"
            CustomSettingLayout:setting_title="@string/recognize_interval" />


        <com.armatura.biomodule.view.CustomSettingLayout
            android:id="@+id/recognizeThresholdSetView"
            setting_value="@{CommonSettings.recogThreshold,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_hint="@string/rang_0_to_1"
            CustomSettingLayout:setting_key="recognize_threshold"
            CustomSettingLayout:setting_title="@string/config_threshold" />

        <com.armatura.biomodule.view.CustomSettingSpinnerLayout
            android:id="@+id/sensorFrameSpinner"
            set_sensor_frame="@{CommonSettings.sensorFrameRate,default=15}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_spinner_entries="@array/sensor_frame_rate_array"
            CustomSettingLayout:setting_title="@string/sensor_frame_rate" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/maxFaceSwitchView"
            customChecked="@{CommonSettings.maxFaceEnable,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_hint="@string/max_face_enable_tips"
            CustomSettingLayout:setting_title="@string/max_face_enable" />

        <com.armatura.biomodule.view.CustomSettingSpinnerLayout
            android:id="@+id/ledControlModeSpinner"
            set_led_control_mode="@{CommonSettings.ledControlMode,default=1}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_spinner_entries="@array/led_control_mode_array"
            CustomSettingLayout:setting_title="@string/led_control_mode_title" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/pushPhotoEnableSwitchView"
            customChecked="@{CommonSettings.pushPhotoEnable,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_hint="@string/push_photo_enable_tips"
            CustomSettingLayout:setting_title="@string/push_photo_enable" />

        <com.armatura.biomodule.view.CustomSettingSpinnerLayout
            android:id="@+id/ledBreathTypeSpinner"
            set_led_breath_type="@{CommonSettings.ledBreathType,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_spinner_entries="@array/led_breath_type_array"
            CustomSettingLayout:setting_title="@string/led_breath_type_title" />

        <com.armatura.biomodule.view.CustomSettingSpinnerLayout
            android:id="@+id/videoStreamModeSpinner"
            set_led_breath_type="@{CommonSettings.videoStreamMode,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_spinner_entries="@array/video_stream_mode_type_array"
            CustomSettingLayout:setting_title="@string/video_stream_mode_title" />

        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/standByModeSwitchView"
            customChecked="@{CommonSettings.standbyMode,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_title="Standby Mode" />


        <com.armatura.biomodule.view.CustomSettingSwitchLayout
            android:id="@+id/pushDetectionDistanceSwitchView"
            customChecked="@{CommonSettings.pushDetectionDistance,default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_title="Push Detection Distance" />

        <com.armatura.biomodule.view.CustomSettingSpinnerLayout
            android:id="@+id/illuminationTriggerModeSpinner"
            set_illumination_trigger_mode="@{CommonSettings.illuminationTriggerMode,default=0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:setting_spinner_entries="@array/illumination_trigger_mode_type_array"
            CustomSettingLayout:setting_title="@string/illumination_trigger_mode_title" />



        <com.armatura.biomodule.view.CustomRangeSeekBarLayout
            android:id="@+id/detectionDistanceSeekBar"
            fromValue="@{CommonSettings.minDetectionDistance}"
            toValue="@{CommonSettings.maxDetectionDistance}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            CustomSettingLayout:max="180"
            CustomSettingLayout:min="30"
            CustomSettingLayout:setting_title="@string/detection_distance" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>